plugins {
	id 'java'
	id 'java-library'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ticketrush'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springCloudVersion', "2025.1.0")
}

// OpenFeign QueryDSL version
def queryDslVersion = "6.10.1"

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'

	// OpenFeign QueryDSL
	implementation "io.github.openfeign.querydsl:querydsl-jpa:${queryDslVersion}"
	annotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${queryDslVersion}:jpa"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
	testAnnotationProcessor "io.github.openfeign.querydsl:querydsl-apt:${queryDslVersion}:jpa"
	testAnnotationProcessor "jakarta.persistence:jakarta.persistence-api"

	// Kafka
	implementation 'org.springframework.boot:spring-boot-starter-kafka'
	testImplementation("org.springframework.boot:spring-boot-starter-kafka-test")

	// validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// JSON 로그 생성을 위한 Logstash Encoder
	implementation('net.logstash.logback:logstash-logback-encoder:9.0') {
		exclude group: 'tools.jackson.core', module: 'jackson-core'
		exclude group: 'tools.jackson.core', module: 'jackson-databind'
	}
	implementation 'tools.jackson.core:jackson-core:3.1.0'
	implementation 'tools.jackson.core:jackson-databind:3.1.0'

	// aop
	implementation 'org.springframework.boot:spring-boot-starter-aspectj'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

tasks.named('test') {
	useJUnitPlatform()
}

bootJar {
	enabled = false
}

jar {
	enabled = true
}